# particle-system

./: README.md  meson.build
inc/: AShader.h  FragmentShader.h
inc/engine/: Engine.hpp
shaders/: basic.fs.glsl  basic.vs.glsl
src/: Engine.cpp  IRenderable.h  Particle.cpp  Particle.h  Shader.cpp  VertexShader.cpp  main.cpp
src/engine/: Engine.cpp  Engine.hpp
src/shaders/: AShader.cpp  AShader.h  AShaderProgram.h  FragmentShader.cpp  ShaderProgram.cpp  ShaderProgram.h  VertexShader.cpp  VertexShader.h
